# react-native-tele-image

./: CONTRIBUTING.md  README.md  TeleImage.podspec  deploy.sh  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: build.gradle  settings.gradle
android/src/main/cpp/: CMakeLists.txt  teleimage_jni.cpp
android/src/main/java/com/teleimage/: TeleImageAnimatedDecoder.kt  TeleImageBitmapPool.java  TeleImageHttpTask.java  TeleImageJni.java  TeleImageMemCache.java  TeleImageModule.kt  TeleImagePackage.kt  TeleImageProgressiveLoader.kt  TeleImageReceiver.java  TeleImageStrippedDecoder.java  TeleImageView.kt  TeleImageViewManager.kt  ThumbHashDecoder.kt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/teleimage/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/TeleImageExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/TeleImageExample.xcodeproj/: project.pbxproj
example/ios/TeleImageExample.xcodeproj/xcshareddata/xcschemes/: TeleImageExample.xcscheme
example/ios/TeleImageExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: TeleImageThumbHash.h  TeleImageThumbHash.m  TeleImageView.h  TeleImageView.mm
src/: TeleImage.tsx  TeleImageCache.ts  TeleImagePrefetch.ts  TeleImageViewNativeComponent.ts  index.tsx  react-native-codegen.d.ts  types.ts
